# sql_safe

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
scripts/: policy_checks.py
src/sql_safe/: __init__.py  docstring_templates.md  error_handling_guide.md  exceptions.py  mysql.py  safe_query.py  validation.py
tests/: conftest.py  test_mysql.py  test_safe_query.py  test_sql_safe_basic.py
